# submission_code_ndss_f2022_545

./: README.md
key-transparency/: .gitignore  Cargo.toml  README.md
key-transparency/bench/: Cargo.toml  results.txt
key-transparency/bench/src/: idp_client.rs  micro_benchmark.rs  utils.rs  witness_client.rs
key-transparency/config/: Cargo.toml
key-transparency/config/src/: lib.rs
key-transparency/crypto/: Cargo.toml
key-transparency/crypto/src/: lib.rs
key-transparency/crypto/src/tests/: crypto_tests.rs
key-transparency/idp/: Cargo.toml
key-transparency/idp/src/: aggregator.rs  batcher.rs  lib.rs  main.rs  prover.rs  publisher.rs  synchronizer.rs
key-transparency/idp/tests/: publish_tests.rs
key-transparency/messages/: Cargo.toml
key-transparency/messages/src/: error.rs  lib.rs  publish.rs  sync.rs  update.rs
key-transparency/messages/tests/: publish_tests.rs
key-transparency/network/src/: receiver.rs  reliable_sender.rs
key-transparency/scripts/: .gitignore  README.md  fabfile.py  settings.json
key-transparency/scripts/benchmark/: aggregate.py  commands.py  config.py  instance.py  local.py  logs.py  plot.py  remote.py  settings.py  utils.py
key-transparency/storage/: Cargo.toml
key-transparency/storage/src/: akd_storage.rs  lib.rs
key-transparency/test_utils/: Cargo.toml
key-transparency/test_utils/src/: lib.rs
key-transparency/witness/: Cargo.toml
key-transparency/witness/src/: lib.rs  main.rs  publish_handler.rs  sync_helper.rs
key-transparency/witness/tests/: publish_tests.rs  sync_tests.rs
vkd_azks_seemless/: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md  docker-compose.yml
vkd_azks_seemless/benches/: azks.rs
vkd_azks_seemless/integration_tests/: Cargo.toml
vkd_azks_seemless/integration_tests/src/: lib.rs  test_util.rs
vkd_azks_seemless/poc/: Cargo.toml
vkd_azks_seemless/poc/src/: commands.rs  directory_host.rs  main.rs
vkd_azks_seemless/vkd/: Cargo.toml
vkd_azks_seemless/vkd/src/: append_only_zks.rs  auditor.rs  client.rs  directory.rs  errors.rs  history_tree_node.rs  lib.rs  node_state.rs  proof_structs.rs  serialization.rs  test_utils.rs  tests.rs  utils.rs
vkd_azks_seemless/vkd/src/ecvrf/: ecvrf_impl.rs  mod.rs  tests.rs  traits.rs
vkd_azks_seemless/vkd/src/storage/: memory.rs  mod.rs  tests.rs  timed_cache.rs  transaction.rs  types.rs
vkd_azks_seemless/vkd_client/: Cargo.toml
vkd_azks_seemless/vkd_client/src/: ecvrf.rs  hash.rs  tests.rs  types.rs  utils.rs  verify.rs
vkd_azks_seemless/vkd_mysql/: Cargo.toml  README.md
vkd_azks_seemless/vkd_mysql/src/: lib.rs  mysql.rs  mysql_db_tests.rs  mysql_storables.rs
vkd_azks_seemless/vkd_test_tools/: Cargo.toml
vkd_azks_seemless/vkd_test_tools/src/: lib.rs  main.rs  test_suites.rs
vkd_azks_seemless/vkd_test_tools/src/fixture_generator/: generator.rs  mod.rs  parser.rs
vkd_azks_seemless/vkd_test_tools/src/fixture_generator/examples/: mod.rs
vkd_azks_seemless/vkd_test_tools/src/fixture_generator/reader/: mod.rs  tests.rs  yaml.rs
vkd_ozks/: CONTRIBUTING.md  README.md  TESTING.md  docker-compose.yml
vkd_ozks/benches/: ozks.rs
vkd_ozks/integration_tests/src/: memory_tests.rs  mysql_tests.rs  test_util.rs
vkd_ozks/poc/: Cargo.toml
vkd_ozks/poc/doc/: publish_metrics_log.txt
vkd_ozks/poc/src/: directory_host.rs  logs.rs  main.rs
vkd_ozks/vkd/src/: auditor.rs  client.rs  directory.rs  errors.rs  helper_structs.rs  lib.rs  node_label.rs  ordered_append_only_zks.rs  proof_structs.rs  serialization.rs  test_utils.rs  tests.rs  tree_node.rs  utils.rs
vkd_ozks/vkd/src/ecvrf/: ecvrf_impl.rs  no_vrf.rs  traits.rs
vkd_ozks/vkd/src/storage/: memory.rs  mod.rs  node_state.rs  tests.rs  timed_cache.rs  transaction.rs  types.rs
vkd_ozks/vkd_client/src/: ecvrf.rs  hash.rs  lib.rs  tests.rs  types.rs  verify.rs
vkd_ozks/vkd_mysql/src/: lib.rs  mysql.rs  mysql_db_tests.rs  mysql_storables.rs
vkd_ozks/vkd_test_tools/src/: test_suites.rs
vkd_ozks/vkd_test_tools/src/fixture_generator/: generator.rs  parser.rs
vkd_ozks/vkd_test_tools/src/fixture_generator/examples/: example_tests.rs  test.yaml
vkd_ozks/vkd_test_tools/src/fixture_generator/reader/: mod.rs  yaml.rs
vkd_ozks/vkd_test_tools/src/fixture_generator/writer/: mod.rs  yaml.rs
