[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
statistical = "1.0.0"
futures = "0.3.19"
bincode = "1.3.3"
bytes = "1.1.0"
tokio = { version = "1.15.0", features = ["macros", "sync", "time", "rt", "rt-multi-thread"] }
log = "0.4.14"
clap = { version = "3.0.14", features = ["cargo"] }
anyhow = "1.0.53"
env_logger = "0.9.0"

crypto = { path = "../crypto" }
storage = { path = "../storage", optional = true }
config = { path = "../config" }
messages = { path = "../messages" }
network = { path = "../network" }
test_utils = { path = "../test_utils" }

[dependencies.vkd]
git = "https://github.com/anonauthorsub/submission_code_ndss_f2022_545/vkd_ozks"
rev = "e79f87d89cbef83b8f1361e298b31ac6fb172c51"
features = ["serde_serialization"]

[features]
benchmark = []
micro-benchmark = ["storage"]
witness-only-benchmark = []

[[bin]]         
name = "micro_benchmark"   
path = "src/micro_benchmark.rs" 
required-features = ["micro-benchmark"]

[[bin]]         
name = "witness_client"   
path = "src/witness_client.rs" 
required-features = ["witness-only-benchmark"]

[[bin]]         
name = "idp_client"   
path = "src/idp_client.rs" 
required-features = ["benchmark"]