[package]
name = "messages"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "1.0.1"
thiserror = "1.0.30"
serde = { version = "1.0.133", features = ["derive"] }
bincode = "1.3.3"
winter-crypto = "0.2"
winter-math = "0.2"
winter-utils = "0.2"
futures = "0.3.19"
base64 = "0.13.0"

crypto = { path = "../crypto" }
config = { path = "../config" }

[dependencies.vkd]
git = "https://github.com/anonauthorsub/submission_code_ndss_f2022_545/vkd_ozks"
rev = "e79f87d89cbef83b8f1361e298b31ac6fb172c51"
features = ["serde_serialization"]

[dev-dependencies]
test_utils = { path = "../test_utils" }
tokio = { version = "1.15.0", features = ["macros"] }