[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.15.0", features = ["sync"] }
rocksdb = "0.18.0"
async-trait = "0.1.52"
log = "0.4.14"
bincode = "1.3.3"

[dependencies.vkd]
git = "https://github.com/anonauthorsub/submission_code_ndss_f2022_545/vkd_ozks"
rev = "e79f87d89cbef83b8f1361e298b31ac6fb172c51"
features = ["serde_serialization"]