[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.1.0"
rand = "0.7.3"
bincode = "1.3.3"
tokio = "1.15.0"
futures = "0.3.19"
tokio-util = { version = "0.6.9", features= ["codec"] }

crypto = { path = "../crypto" }
config = { path = "../config" }
storage = { path = "../storage" }
network = { path = "../network" }
messages = { path = "../messages" }
witness = { path = "../witness" }
idp = { path = "../idp" }

[dependencies.vkd]
git = "https://github.com/anonauthorsub/submission_code_ndss_f2022_545/vkd_ozks"
rev = "e79f87d89cbef83b8f1361e298b31ac6fb172c51"
features = ["serde_serialization"]