[package]
name = "witness"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.15.0", features = ["rt", "sync", "macros", "rt-multi-thread"] }
log = "0.4.14"
bincode = "1.3.3"
bytes = "1.1.0"
async-trait = "0.1.52"
futures = "0.3.19"
clap = { version = "3.0.14", features = ["cargo"] }
anyhow = "1.0.53"
env_logger = "0.9.0"

crypto = { path = "../crypto" }
config = { path = "../config" }
storage = { path = "../storage" }
network = { path = "../network" }
messages = { path = "../messages" }

[dependencies.vkd]
git = "https://github.com/anonauthorsub/submission_code_ndss_f2022_545/vkd_ozks"
rev = "e79f87d89cbef83b8f1361e298b31ac6fb172c51"
features = ["serde_serialization"]

[dev-dependencies]
test_utils = { path = "../test_utils" }
function_name = "0.2.0"

[features]
witness-only-benchmark = []
