[package]
name = "vkd"
version = "0.6.2"
authors = ["Anon. authors of NDSS Submission #545"]
description = "An implementation of an auditable key directory"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["key-transparency", "vkd"]
repository = "https://github.com/anonauthorsub/submission_code_ndss_f2022_545/vkd_ozks"
readme = "../README.md"

[features]
bench = ["public-tests"]
public-tests = ["rand", "bincode", "colored", "once_cell", "serde_serialization"]
# In the event that VRF's are enabled, AND builder has requested serde support
# Add the serde flag to the dalek crate with --features "ed25519-dalek/serde"
vrf = ["curve25519-dalek", "ed25519-dalek"]
default = ["vrf"]
serde_serialization = ["serde", "ed25519-dalek/serde"]

[dependencies]
## Required dependencies ##
hex = "0.4"
async-trait = "0.1"
tokio = { version = "1.10", features = ["full"] }
async-recursion = "0.3"
log = { version = "0.4.8", features = ["kv_unstable"] }
winter-crypto = "0.2"
winter-utils = "0.2"
winter-math = "0.2"
keyed_priority_queue = "0.3"

## Optional Dependencies ##
bincode = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
rand = { version = "0.7", optional = true }
curve25519-dalek = { version = "3", optional = true }
ed25519-dalek = { version = "1", optional = true }
colored = { version = "2", optional = true }
once_cell = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.3"
serial_test = "0.5"
proptest = "1.0"
proptest-derive = "0.3"
colored = { version = "2" }
once_cell = { version = "1" }
ctor = "0.1"

vkd = { path =".", features = ["vrf", "public-tests"] }

[[bench]]
name = "ozks"
harness = false
required-features = ["bench"]
path = "../benches/ozks.rs"
