[package]
name = "vkd_mysql"
version = "0.6.2"
authors = ["Anon. authors of NDSS Submission #545"]
description = "A MySQL storage layer implementation for an auditable key directory (VKD)"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["key-transparency", "vkd", "mysql", "vkd-mysql"]
repository = "https://github.com/anonauthorsub/submission_code_ndss_f2022_545/vkd_ozks/"

[features]
bench = []

[dependencies]
bincode = "1"
winter-crypto = "0.2"
winter-utils = "0.2"
winter-math = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1.10", features = ["full"] }
async-recursion = "0.3"
mysql_async = "0.29"
log = { version = "0.4.8", features = ["kv_unstable"] }
vkd = { path = "../vkd", version = "^0.6.2", features = ["serde_serialization"] }

[dev-dependencies]
criterion = "0.3"
serial_test = "0.5"
vkd = { path = "../vkd", version = "^0.6.2", features = ["public-tests"] }
