[package]
name = "vkd_test_tools"
version = "0.6.2"
authors = ["Anon. authors of NDSS Submission #545"]
description = "Test utilities and tooling"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["key-transparency", "vkd"]
repository = "https://github.com/anonauthorsub/submission_code_ndss_f2022_545/vkd_ozks"
readme = "../README.md"

[dependencies]
winter-crypto = "0.2"
winter-math = "0.2"
clap = { version="3", features = ["derive"]}
tokio = { version = "1.10", features = ["full"] }
regex = "1.5"
rand = "0.7"
serde_yaml = "0.8"
serde = "1.0"
async-trait = "0.1"
thread-id = "3"

vkd = { path = "../vkd", features = ["serde_serialization"], version = "^0.6.2" }

[dev-dependencies]
assert_fs="1"

vkd = { path = "../vkd", features = ["public-tests", "rand", "serde_serialization"], version = "^0.6.2" }
